trying font fix on mobile

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,3 +1,21 @@
 $primary-color: #940956;
 $secondary-color: #ffffff;
 $third-color: #b5faff;
+
+body {
+    -webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
+}
+
+@-webkit-keyframes fontfix {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
