--- a/src/style/_components.scss
+++ b/src/style/_components.scss
@@ -36,16 +36,19 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
+  font-family: 'Segoe Script' !important;
 
   &-title {
     font-size: 4rem;
     padding: 10px;
     text-shadow: 2px 2px 4px #000000;
+    font-family: 'Segoe Script' !important;
   }
 
   &-subtitle {
     padding: 20px;
     text-shadow: 2px 2px 4px #000000;
+    font-family: 'Segoe Script' !important;
   }
 }
 
